--- a/mailing/templates/mailing/mailing_list.html
+++ b/mailing/templates/mailing/mailing_list.html
@@ -46,7 +46,7 @@
                             <td>{{ mailing.message.title }}</td>
                             <td>
                                 <a href="#" class="btn btn-sm btn-primary">Просмотр</a>
-                                <a href="#" class="btn btn-sm btn-warning">Редактировать</a>
+                                <a href="{% url 'mailing:mailing_update' mailing.pk %}" class="btn btn-sm btn-warning">Редактировать</a>
                             </td>
                         </tr>
                         {% empty %}
@@ -56,7 +56,7 @@
                         {% endfor %}
                     </tbody>
                 </table>
-                <a href="#" class="btn btn-primary">Добавить рассылку</a>
+                <a href="{% url 'mailing:mailing_create' %}" class="btn btn-primary">Добавить рассылку</a>
             </div>
         </div>
     </div>
