--- a/mailing/templates/mailing/client_detail.html
+++ b/mailing/templates/mailing/client_detail.html
@@ -14,7 +14,7 @@
                         <a href="{% url 'mailing:client_delete' object.pk %}" class="btn btn-sm btn-danger">
                             Удалить
                         </a>
-                        <a href="{% url 'mailing:clients_list' %}" class="btn btn-sm btn-secondary">
+                        <a href="{% url 'mailing:client_list' %}" class="btn btn-sm btn-secondary">
                             Назад к списку
                         </a>
                     </div>
