--- a/mailing/templates/mailing/client_form.html
+++ b/mailing/templates/mailing/client_form.html
@@ -53,7 +53,7 @@
                         <button type="submit" class="btn btn-success">
                             {% if object %}Сохранить{% else %}Добавить{% endif %}
                         </button>
-                        <a href="{% url 'mailing:clients_list' %}" class="btn btn-secondary">Отмена</a>
+                        <a href="{% url 'mailing:client_list' %}" class="btn btn-secondary">Отмена</a>
                     </div>
                 </form>
             </div>
