--- a/mailing/templates/mailing/home_page.html
+++ b/mailing/templates/mailing/home_page.html
@@ -1,17 +1,44 @@
 {% extends 'mailing/base.html' %}
-{% load my_tags%}
-{% block title %}Каталог{% endblock %}
-{% block content%}
+{% block title %}Главная{% endblock %}
+{% block content %}
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-4">Cервис управления рассылками</h1>
+        <h1 class="display-4">Сервис управления рассылками</h1>
         <p class="lead">Добро пожаловать!</p>
-    <a class="btn btn-primary" href="/" role="button">Добавить рассылку</a>
-</div>
-<div class="album py-5 bg-body-tertiary">
-    <div class="container">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-
-      </div>
     </div>
-  </div>
-{% endblock%}
+
+    <div class="container mb-5">
+        <div class="row text-center">
+            <!-- Общее количество рассылок -->
+            <div class="col-md-4 mb-4">
+                <div class="p-3 border rounded">
+                    <h3>{{ mailing_count }}</h3>
+                    <p class="text-muted">Всего рассылок</p>
+                </div>
+            </div>
+
+            <!-- Активные рассылки -->
+            <div class="col-md-4 mb-4">
+                <div class="p-3 border rounded">
+                    <h3>{{ active_mailing_count }}</h3>
+                    <p class="text-muted">Активных рассылок</p>
+                </div>
+            </div>
+
+            <!-- Количество клиентов -->
+            <div class="col-md-4 mb-4">
+                <div class="p-3 border rounded">
+                    <h3>{{ client_count }}</h3>
+                    <p class="text-muted">Уникальных клиентов</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="album py-5 bg-body-tertiary">
+        <div class="container">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                <!-- Дополнительный контент -->
+            </div>
+        </div>
+    </div>
+{% endblock %}
