--- a/mailing/templates/mailing/includes/inc_menu.html
+++ b/mailing/templates/mailing/includes/inc_menu.html
@@ -1,7 +1,13 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
     <nav class="ms-5">
-        <a class="p-2 btn btn-outline-primary" href="/">Каталог</a>
-        <a class="p-2 btn btn-outline-primary" href="/">Контакты</a>
+        <a class="p-2 btn btn-outline-primary" href="/">Home</a>
+        {% if user.is_authenticated %}
+          <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:mailing_list' %}">Мои рассылки</a>
+          <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:message_list' %}">Мои сообщения</a>
+          <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:client_list' %}">Мои клиенты</a>
+          <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:mailing_attempt_list' %}">Статистика</a>
+        {% endif %}
+
     </nav>
     <nav class="ms-auto">
                     <a class="p-2 btn btn-outline-primary" href="/">Вход</a>
