--- a/mailing/templates/mailing/includes/inc_menu.html
+++ b/mailing/templates/mailing/includes/inc_menu.html
@@ -10,7 +10,16 @@
 
     </nav>
     <nav class="ms-auto">
-                    <a class="p-2 btn btn-outline-primary" href="/">Вход</a>
-            <a class="p-2 btn btn-outline-primary" href="/">Регистрация</a>
+        {% if not user.is_authenticated %}
+          <a class="p-2 btn btn-outline-primary" href="{% url 'users:login' %}">Вход</a>
+          <a class="p-2 btn btn-outline-primary" href="{% url 'users:register' %}">Регистрация</a>
+        {% else %}
+          <form method="post" action="{% url 'users:logout' %}">
+            {% csrf_token %}
+            <button type="submit" class="p-2 btn btn-outline-primary">Выход</button>
+          </form>
+        {% endif %}
+
+
     </nav>
 </div>
