--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -8,11 +8,16 @@
                 <div class="card-body">
                     {% csrf_token %}
                     {{ form.as_p }}
-
                 </div>
-                <button type="submit" class="btn btn-primary">
-                  Войти
-                </button>
+                    <button type="submit" class="btn btn-primary">
+                        Войти
+                    </button>
+
+                    <a class="btn btn-primary mt-1" href="{% url 'mailing:message_list' %}" role="button">Отмена</a>
+
+                    <div class="card-footer">
+                        <a href="{% url 'users:password_recovery' %}">Забыли пароль?</a>
+                    </div>
             </div>
         </div>
     </form>
