--- a/mailing/templates/mailing/mailing_list.html
+++ b/mailing/templates/mailing/mailing_list.html
@@ -8,6 +8,11 @@
         <div class="card">
             <div class="card-header">
                 <h3 class="card-title">Список рассылок</h3>
+                <div class="float-end">
+                    <a href="{% url 'mailing:mailing_create' %}" class="btn btn-primary">
+                        <i class="fas fa-plus"></i> Добавить рассылку
+                    </a>
+                </div>
             </div>
             <div class="card-body">
                 <table class="table table-bordered table-hover">
@@ -19,7 +24,7 @@
                             <th>Статус</th>
                             <th>Активность</th>
                             <th>Сообщение</th>
-                            <th>Действия</th>
+                            <th style="width: 150px;">Действия</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -45,8 +50,22 @@
                             </td>
                             <td>{{ mailing.message.title }}</td>
                             <td>
-                                <a href="#" class="btn btn-sm btn-primary">Просмотр</a>
-                                <a href="{% url 'mailing:mailing_update' mailing.pk %}" class="btn btn-sm btn-warning">Редактировать</a>
+                                <div class="d-flex flex-column gap-2">
+                                    <a href="{% url 'mailing:mailing_detail' mailing.pk %}"
+                                       class="btn btn-sm btn-info">
+                                       <i class="fas fa-eye"></i> Просмотр
+                                    </a>
+                                    <a href="{% url 'mailing:mailing_update' mailing.pk %}"
+                                       class="btn btn-sm btn-warning">
+                                       <i class="fas fa-edit"></i> Редактировать
+                                    </a>
+                                    <form method="post" action="{% url 'mailing:mailing_start' mailing.pk %}">
+                                        {% csrf_token %}
+                                        <button type="submit" class="btn btn-sm btn-success w-100">
+                                            <i class="fas fa-play"></i> Запустить
+                                        </button>
+                                    </form>
+                                </div>
                             </td>
                         </tr>
                         {% empty %}
@@ -56,9 +75,21 @@
                         {% endfor %}
                     </tbody>
                 </table>
-                <a href="{% url 'mailing:mailing_create' %}" class="btn btn-primary">Добавить рассылку</a>
             </div>
         </div>
     </div>
 </div>
+
+<style>
+    .gap-2 {
+        gap: 0.5rem;
+    }
+    .w-100 {
+        width: 100%;
+    }
+    .btn-sm {
+        padding: 0.25rem 0.5rem;
+        font-size: 0.875rem;
+    }
+</style>
 {% endblock %}
