--- a/mailing/templates/mailing/message_list.html
+++ b/mailing/templates/mailing/message_list.html
@@ -21,7 +21,7 @@
                                 <th>Тема</th>
                                 <th>Содержание</th>
                                 <th>Используется в рассылках</th>
-                                <th>Действия</th>
+                                <th style="width: 120px;">Действия</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -35,18 +35,18 @@
                                     </span>
                                 </td>
                                 <td>
-                                    <div class="btn-group btn-group-sm">
+                                    <div class="d-flex flex-column gap-2">
                                         <a href="{% url 'mailing:message_detail' message.pk %}"
-                                           class="btn btn-info" title="Просмотр">
-                                            <i class="fas fa-eye"></i>
+                                           class="btn btn-sm btn-info">
+                                           <i class="fas fa-eye"></i> Просмотр
                                         </a>
                                         <a href="{% url 'mailing:message_update' message.pk %}"
-                                           class="btn btn-warning" title="Редактировать">
-                                            <i class="fas fa-edit"></i>
+                                           class="btn btn-sm btn-warning">
+                                           <i class="fas fa-edit"></i> Редактировать
                                         </a>
                                         <a href="{% url 'mailing:message_delete' message.pk %}"
-                                           class="btn btn-danger" title="Удалить">
-                                            <i class="fas fa-trash-alt"></i>
+                                           class="btn btn-sm btn-danger">
+                                           <i class="fas fa-trash-alt"></i> Удалить
                                         </a>
                                     </div>
                                 </td>
@@ -69,4 +69,15 @@
         </div>
     </div>
 </div>
+
+<style>
+    .gap-2 {
+        gap: 0.5rem;
+    }
+    .btn-sm {
+        padding: 0.25rem 0.5rem;
+        font-size: 0.875rem;
+        text-align: left;
+    }
+</style>
 {% endblock %}
