--- a/mailing/templates/mailing/client_list.html
+++ b/mailing/templates/mailing/client_list.html
@@ -5,47 +5,70 @@
     <div class="col-12">
         <div class="card">
             <div class="card-header">
-                <h3 class="card-title">Список клиентов</h3>
-                <div class="float-right">
+                <div class="d-flex justify-content-between align-items-center">
+                    <h3 class="card-title mb-0">Список клиентов</h3>
                     <a href="{% url 'mailing:client_create' %}" class="btn btn-primary">
                         <i class="fas fa-plus"></i> Добавить клиента
                     </a>
                 </div>
             </div>
             <div class="card-body">
-                <table class="table table-bordered table-hover">
-                    <thead>
-                        <tr>
-                            <th>ФИО</th>
-                            <th>Email</th>
-                            <th>Комментарий</th>
-                            <th>Действия</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for client in object_list %}
-                        <tr>
-                            <td>{{ client.full_name }}</td>
-                            <td>{{ client.email }}</td>
-                            <td>{{ client.comment|truncatechars:50 }}</td>
-                            <td>
-                                <a href="{% url 'mailing:client_detail' client.pk %}" class="btn btn-sm btn-primary" title="Просмотр">
-                                    <i class="fas fa-eye"></i>
-                                </a>
-                                <a href="#" class="btn btn-sm btn-warning" title="Редактировать">
-                                    <i class="fas fa-edit"></i>
-                                </a>
-                            </td>
-                        </tr>
-                        {% empty %}
-                        <tr>
-                            <td colspan="4" class="text-center">Нет доступных клиентов</td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
+                {% if object_list %}
+                <div class="table-responsive">
+                    <table class="table table-bordered table-hover">
+                        <thead class="table-light">
+                            <tr>
+                                <th>ФИО</th>
+                                <th>Email</th>
+                                <th>Комментарий</th>
+                                <th style="width: 120px;">Действия</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for client in object_list %}
+                            <tr>
+                                <td>{{ client.full_name }}</td>
+                                <td>{{ client.email }}</td>
+                                <td>{{ client.comment|truncatechars:50 }}</td>
+                                <td>
+                                    <div class="d-flex flex-column gap-2">
+                                        <a href="{% url 'mailing:client_detail' client.pk %}"
+                                           class="btn btn-sm btn-info">
+                                           <i class="fas fa-eye"></i> Просмотр
+                                        </a>
+                                        <a href="{% url 'mailing:client_update' client.pk %}"
+                                           class="btn btn-sm btn-warning">
+                                           <i class="fas fa-edit"></i> Редактировать
+                                        </a>
+                                    </div>
+                                </td>
+                            </tr>
+                            {% empty %}
+                            <tr>
+                                <td colspan="4" class="text-center">Нет доступных клиентов</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+                {% else %}
+                <div class="alert alert-info">
+                    Нет клиентов. <a href="{% url 'mailing:client_create' %}">Добавить первого клиента</a>.
+                </div>
+                {% endif %}
             </div>
         </div>
     </div>
 </div>
+
+<style>
+    .gap-2 {
+        gap: 0.5rem;
+    }
+    .btn-sm {
+        padding: 0.25rem 0.5rem;
+        font-size: 0.875rem;
+        text-align: left;
+    }
+</style>
 {% endblock %}
