--- a/mailing/templates/mailing/client_list.html
+++ b/mailing/templates/mailing/client_list.html
@@ -5,18 +5,16 @@
     <div class="col-12">
         <div class="card">
             <div class="card-header">
-                <div class="d-flex justify-content-between align-items-center">
-                    <h3 class="card-title mb-0">Список клиентов</h3>
-                    <a href="{% url 'mailing:client_create' %}" class="btn btn-primary">
-                        <i class="fas fa-plus"></i> Добавить клиента
-                    </a>
-                </div>
+                <h3 class="card-title">Список клиентов</h3>
+                <a href="{% url 'mailing:client_create' %}" class="btn btn-primary float-right">
+                    <i class="fas fa-plus"></i> Добавить клиента
+                </a>
             </div>
             <div class="card-body">
-                {% if object_list %}
+                {% if client_list %}
                 <div class="table-responsive">
-                    <table class="table table-bordered table-hover">
-                        <thead class="table-light">
+                    <table class="table table-bordered">
+                        <thead>
                             <tr>
                                 <th>ФИО</th>
                                 <th>Email</th>
@@ -25,27 +23,24 @@
                             </tr>
                         </thead>
                         <tbody>
-                            {% for client in object_list %}
+                            {% for client in client_list %}
                             <tr>
                                 <td>{{ client.full_name }}</td>
                                 <td>{{ client.email }}</td>
                                 <td>{{ client.comment|truncatechars:50 }}</td>
                                 <td>
                                     <div class="d-flex flex-column gap-2">
-                                        <a href="{% url 'mailing:client_detail' client.pk %}"
-                                           class="btn btn-sm btn-info">
-                                           <i class="fas fa-eye"></i> Просмотр
+                                        <a href="{% url 'mailing:client_detail' client.pk %}" class="btn btn-sm btn-info">
+                                            <i class="fas fa-eye"></i> Просмотр
                                         </a>
-                                        <a href="{% url 'mailing:client_update' client.pk %}"
-                                           class="btn btn-sm btn-warning">
-                                           <i class="fas fa-edit"></i> Редактировать
+                                        <a href="{% url 'mailing:client_update' client.pk %}" class="btn btn-sm btn-warning">
+                                            <i class="fas fa-edit"></i> Редактировать
+                                        </a>
+                                        <a href="{% url 'mailing:client_delete' client.pk %}" class="btn btn-sm btn-danger">
+                                            <i class="fas fa-trash"></i> Удалить
                                         </a>
                                     </div>
                                 </td>
-                            </tr>
-                            {% empty %}
-                            <tr>
-                                <td colspan="4" class="text-center">Нет доступных клиентов</td>
                             </tr>
                             {% endfor %}
                         </tbody>
@@ -68,7 +63,9 @@
     .btn-sm {
         padding: 0.25rem 0.5rem;
         font-size: 0.875rem;
+        line-height: 1.5;
         text-align: left;
+        width: 100%;
     }
 </style>
 {% endblock %}
