--- a/mailing/templates/mailing/includes/inc_menu.html
+++ b/mailing/templates/mailing/includes/inc_menu.html
@@ -7,19 +7,17 @@
           <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:client_list' %}">Мои клиенты</a>
           <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:mailing_attempt_list' %}">Статистика</a>
         {% endif %}
-
     </nav>
-    <nav class="ms-auto">
+    <nav class="ms-auto d-flex align-items-center">
         {% if not user.is_authenticated %}
           <a class="p-2 btn btn-outline-primary" href="{% url 'users:login' %}">Вход</a>
           <a class="p-2 btn btn-outline-primary" href="{% url 'users:register' %}">Регистрация</a>
         {% else %}
+          <span class="me-3 text-muted">{{ user.email }}</span>
           <form method="post" action="{% url 'users:logout' %}">
             {% csrf_token %}
             <button type="submit" class="p-2 btn btn-outline-primary">Выход</button>
           </form>
         {% endif %}
-
-
     </nav>
 </div>
