--- a/mailing/templates/mailing/message_list.html
+++ b/mailing/templates/mailing/message_list.html
@@ -1,71 +1,64 @@
 {% extends 'mailing/base.html' %}
+
 {% block title %}Список сообщений{% endblock %}
+
 {% block content %}
 <div class="row">
     <div class="col-12">
         <div class="card">
             <div class="card-header">
-                <div class="d-flex justify-content-between align-items-center">
-                    <h3 class="card-title mb-0">Список сообщений</h3>
+                <h3 class="card-title">Список сообщений</h3>
+                <div class="float-end">
                     <a href="{% url 'mailing:message_create' %}" class="btn btn-primary">
-                        <i class="fas fa-plus"></i> Создать сообщение
+                        <i class="fas fa-plus"></i> Добавить сообщение
                     </a>
                 </div>
             </div>
             <div class="card-body">
-                {% if object_list %}
-                <div class="table-responsive">
-                    <table class="table table-bordered table-hover">
-                        <thead class="table-light">
-                            <tr>
-                                <th>Тема</th>
-                                <th>Содержание</th>
-                                <th>Используется в рассылках</th>
-                                <th style="width: 120px;">Действия</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for message in object_list %}
-                            <tr>
-                                <td>{{ message.title }}</td>
-                                <td>{{ message.letter_body|truncatechars:50 }}</td>
-                                <td>
-                                    <span class="badge bg-primary">
-                                        {{ message.mailings.count }}
-                                    </span>
-                                </td>
-                                <td>
-                                    <div class="d-flex flex-column gap-2">
-                                        <a href="{% url 'mailing:message_detail' message.pk %}"
-                                           class="btn btn-sm btn-info">
-                                           <i class="fas fa-eye"></i> Просмотр
-                                        </a>
-                                        <a href="{% url 'mailing:message_update' message.pk %}"
-                                           class="btn btn-sm btn-warning">
-                                           <i class="fas fa-edit"></i> Редактировать
-                                        </a>
-                                        <a href="{% url 'mailing:message_delete' message.pk %}"
-                                           class="btn btn-sm btn-danger">
-                                           <i class="fas fa-trash-alt"></i> Удалить
-                                        </a>
-                                    </div>
-                                </td>
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
+                {% if message_list %}
+                <table class="table table-bordered table-hover">
+                    <thead>
+                        <tr>
+                            <th>Тема</th>
+                            <th>Содержание</th>
+                            <th style="width: 150px;">Действия</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for message in message_list %}
+                        <tr>
+                            <td>{{ message.title }}</td>
+                            <td>{{ message.letter_body|truncatechars:50 }}</td>
+                            <td>
+                                <div class="d-flex flex-column gap-2">
+                                    <a href="{% url 'mailing:message_detail' message.pk %}"
+                                       class="btn btn-sm btn-info">
+                                       <i class="fas fa-eye"></i> Просмотр
+                                    </a>
+                                    <a href="{% url 'mailing:message_update' message.pk %}"
+                                       class="btn btn-sm btn-warning">
+                                       <i class="fas fa-edit"></i> Редактировать
+                                    </a>
+                                    <a href="{% url 'mailing:message_delete' message.pk %}"
+                                       class="btn btn-sm btn-danger">
+                                       <i class="fas fa-trash"></i> Удалить
+                                    </a>
+                                </div>
+                            </td>
+                        </tr>
+                        {% empty %}
+                        <tr>
+                            <td colspan="3" class="text-center">Нет доступных сообщений</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
                 {% else %}
                 <div class="alert alert-info">
-                    Нет доступных сообщений. <a href="{% url 'mailing:message_create' %}">Создать первое сообщение</a>.
+                    Нет сообщений. <a href="{% url 'mailing:message_create' %}">Добавить первое сообщение</a>.
                 </div>
                 {% endif %}
             </div>
-            {% if is_paginated %}
-            <div class="card-footer">
-                {% include 'includes/pagination.html' %}
-            </div>
-            {% endif %}
         </div>
     </div>
 </div>
@@ -77,7 +70,7 @@
     .btn-sm {
         padding: 0.25rem 0.5rem;
         font-size: 0.875rem;
-        text-align: left;
+        width: 100%;
     }
 </style>
 {% endblock %}
