--- a/mailing/templates/mailing/client_list.html
+++ b/mailing/templates/mailing/client_list.html
@@ -1,11 +1,11 @@
 {% extends 'mailing/base.html' %}
-{% block title %}Список клиентов{% endblock %}
+{% block title %}{% if is_manager %}Все клиенты{% else %}Мои клиенты{% endif %}{% endblock %}
 {% block content %}
 <div class="row">
     <div class="col-12">
         <div class="card">
             <div class="card-header">
-                <h3 class="card-title">Список клиентов</h3>
+                <h3 class="card-title">{% if is_manager %}Все клиенты{% else %}Мои клиенты{% endif %}</h3>
                 <a href="{% url 'mailing:client_create' %}" class="btn btn-primary float-right">
                     <i class="fas fa-plus"></i> Добавить клиента
                 </a>
@@ -16,6 +16,7 @@
                     <table class="table table-bordered">
                         <thead>
                             <tr>
+                                {% if is_manager %}<th>Владелец</th>{% endif %}
                                 <th>ФИО</th>
                                 <th>Email</th>
                                 <th>Комментарий</th>
@@ -25,6 +26,7 @@
                         <tbody>
                             {% for client in client_list %}
                             <tr>
+                                {% if is_manager %}<td>{{ client.owner.email }}</td>{% endif %}
                                 <td>{{ client.full_name }}</td>
                                 <td>{{ client.email }}</td>
                                 <td>{{ client.comment|truncatechars:50 }}</td>
@@ -33,12 +35,14 @@
                                         <a href="{% url 'mailing:client_detail' client.pk %}" class="btn btn-sm btn-info">
                                             <i class="fas fa-eye"></i> Просмотр
                                         </a>
+                                        {% if not is_manager or client.owner == request.user %}
                                         <a href="{% url 'mailing:client_update' client.pk %}" class="btn btn-sm btn-warning">
                                             <i class="fas fa-edit"></i> Редактировать
                                         </a>
                                         <a href="{% url 'mailing:client_delete' client.pk %}" class="btn btn-sm btn-danger">
                                             <i class="fas fa-trash"></i> Удалить
                                         </a>
+                                        {% endif %}
                                     </div>
                                 </td>
                             </tr>
