--- a/mailing/templates/mailing/includes/inc_menu.html
+++ b/mailing/templates/mailing/includes/inc_menu.html
@@ -2,22 +2,38 @@
     <nav class="ms-5">
         <a class="p-2 btn btn-outline-primary" href="/">Home</a>
         {% if user.is_authenticated %}
-          <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:mailing_list' %}">Мои рассылки</a>
-          <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:message_list' %}">Мои сообщения</a>
-          <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:client_list' %}">Мои клиенты</a>
-          <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:mailing_attempt_list' %}">Статистика</a>
+            <!-- Для всех авторизованных -->
+            <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:mailing_list' %}">
+                {% if is_manager %}Рассылки{% else %}Мои рассылки{% endif %}
+            </a>
+
+            <!-- Только для обычных пользователей -->
+            {% if not is_manager %}
+                <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:message_list' %}">Мои сообщения</a>
+                <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:mailing_attempt_list' %}">Статистика</a>
+            {% endif %}
+
+            <!-- Для всех авторизованных -->
+            <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:client_list' %}">
+                {% if is_manager %}Клиенты{% else %}Мои клиенты{% endif %}
+            </a>
+
+            <!-- Только для менеджеров -->
+            {% if is_manager %}
+                <a class="p-2 btn btn-outline-primary" href="{% url 'users:user_list' %}">Пользователи</a>
+            {% endif %}
         {% endif %}
     </nav>
     <nav class="ms-auto d-flex align-items-center">
         {% if not user.is_authenticated %}
-          <a class="p-2 btn btn-outline-primary" href="{% url 'users:login' %}">Вход</a>
-          <a class="p-2 btn btn-outline-primary" href="{% url 'users:register' %}">Регистрация</a>
+            <a class="p-2 btn btn-outline-primary" href="{% url 'users:login' %}">Вход</a>
+            <a class="p-2 btn btn-outline-primary" href="{% url 'users:register' %}">Регистрация</a>
         {% else %}
-          <span class="me-3 text-muted">{{ user.email }}</span>
-          <form method="post" action="{% url 'users:logout' %}">
-            {% csrf_token %}
-            <button type="submit" class="p-2 btn btn-outline-primary">Выход</button>
-          </form>
+            <span class="me-3 text-muted">{{ user.email }}</span>
+            <form method="post" action="{% url 'users:logout' %}">
+                {% csrf_token %}
+                <button type="submit" class="p-2 btn btn-outline-primary">Выход</button>
+            </form>
         {% endif %}
     </nav>
 </div>
